<resources>
<string name="app_name" translatable="false">SplashScreenAndIntros</string>
<string name="comp_name" translatable="false">Ovidos Creative</string>


<string name="next">NEXT</string>
<string name="skip">SKIP</string>
<string name="start">GOT IT</string>

<string name="slide_1_title">Hello Food!</string>
<string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

<string name="slide_2_title">Movie Tickets</string>
<string name="slide_2_desc">Book movie tickets for your family and friends!</string>

<string name="slide_3_title">Great Discounts</string>
<string name="slide_3_desc">Best discounts on every single service we offer!</string>

<string name="slide_4_title">World Travel</string>
<string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

<string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
<string name="play_again">Play Again</string>


<string name="getBackToIntro">Create Notification For Magical Events!</string>
<string name="title_activity_welcome">Home Screen</string>

<string name="notificationTitle">Let\'s have a look at muharrir.net!</string>
<string name="clickToRedirect">You will be directed when you click here.</string>

 <string name="changeLang">Change the App Language to Turkish!</string>
 <string name="justTest">This is intended for test purposes only.</string>

 <string name="popUp">Create Pop Up!</string>

 <string name="titlePopup">We gotta ask!</string>
 <string name="messagePopup">Were you really the one who wanted to open this dialog?</string>

 <string name="reallyToast">Really? You\'ve gotta be kidding!</string>
 <string name="goodToast">Oh, good then!</string>

 <string name="yes">Yes</string>
 <string name="no">No</string>

 <string name="versionNotFound">Version information cannot be found.</string>
 <string name="versionText">App Version:</string>

    <string-array name="dialog_single_choice_array">
        <item>Sessiz kalırım!</item>
        <item>Sözlü uyarırım!</item>
        <item>Ağız burun dalarım!</item>
    </string-array>

</resources>

